# tara-fusion

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  STRIDE_IMPLEMENTATION.md  SUPPORT.md  docker-compose.yml  package-lock.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
assets/: emb3d_properties.json  emb3d_properties_list.xlsx  tara_requirements.csv
backend/: .gitignore  Program.cs  appsettings.json  backend.csproj
docs/: README.md  SBOM-Summary.md  SBOM.md  SLSA-COMPLIANCE.md  SLSA-IMPLEMENTATION.md  SLSA-LEVEL-COMPARISON.md  SLSA-LEVEL3-SETUP.md  SLSA-QUICK-REFERENCE.md  SLSA-VERIFICATION.md  TraceabilityGraph.md  conf.py  index.rst  pyproject.toml  ubproject.toml
docs/_static/_templates/furo/: side-github.html
docs/basics/: configuration.rst  installation.rst  quickstart.rst
docs/development/: architecture.rst  contributing.rst  testing.rst
docs/features/: ai-features.rst  attack-trees.rst  export.rst  index.rst
scripts/: build.sh
src/: .env.example  .env.sample  App.tsx  ProjectView.tsx  eslint.config.js  i18n.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.test.ts  types.ts  vite-env.d.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+154 files in other folders)
